--- a/styles.css
+++ b/styles.css
@@ -13,3 +13,90 @@
 }
 
 /* 🦊 Vos styles ici */
+
+body {
+  width: 430px;
+  height: 1994px;
+  font-family: century gothic;
+  background-color: #302e2e;
+  color: white;
+  font-size: 16px;
+}
+
+header {
+  display: flex;
+  justify-content: space-between
+}
+
+header img {
+  max-width: 62px;
+  max-height: 62px;
+  stroke-width: 4px;
+  stroke: #FFFC00;
+
+}
+
+h1 {
+  font-size: 32px;
+}
+
+h2 {
+  font-size: 20px;
+  border-radius: 10px;
+  border: 3px solid #FFFC00;
+  text-align: center;
+}
+
+h3 {
+  font-size: 16px;
+  font-weight: bold;
+}
+
+h4 {
+  color: #FFFC00;
+  font-weight: 400;
+  background-color: black;
+  padding: 5 20px;
+  border-radius: 5px;
+  width: 103px;
+  height: 22px;
+  text-align: center;
+}
+
+.retour {
+  background-color: #FFFC00;
+  border: 0;
+  font-size: 16px;
+  font-weight: 600;
+  border-radius: 5px;
+  width: 77px;
+  height: 26px;
+}
+
+.voir {
+  background-color: #FFFC00;
+  border: 0;
+  font-size: 16px;
+  font-weight: 600;
+  border-radius: 10px;
+  width: 777px;
+}
+
+.titrartiste {
+  display: flex;
+  flex-direction: row;
+}
+
+.infos {
+  display: flex;
+  flex-direction: row;
+  align-items: space-around;
+}
+
+.infos div {
+  background-color: black;
+  color: white;
+  padding: 16px 78px;
+  border-radius: 5px;
+  align-content: center;
+}
