--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,8 @@
 /* 💡 Configuration des styles du sélecteur de note */
 :root {
-  --gl-star-empty: url(../img/star-empty.svg);
-  --gl-star-full: url(../img/star-full.svg);
-  --gl-star-size: 24px;
+  --gl-star-empty: url(../img/Notes/empty.svg);
+  --gl-star-full: url(../img/Notes/full.svg);
+  --gl-star-size: 48px;
   --gl-tooltip-border-radius: 4px;
   --gl-tooltip-font-size: 0.875rem;
   --gl-tooltip-font-weight: 400;
@@ -28,14 +28,17 @@ header {
   justify-content: space-between;
   flex-direction: row;
   align-items: center;
+  height: 90px;
 }
 
 header img {
   max-width: 62px;
   max-height: 62px;
-  stroke-width: 4px;
-  stroke: #FFFC00;
+}
 
+.contourpp {
+  border: 4px;
+  border-color: #FFFC00;
 }
 
 .retour {
@@ -52,8 +55,8 @@ header img {
   border-radius: 30px;
   width: 185px;
   height: 339px;
-  margin-left: 50%;
-  margin-right: 50%;
+  display: flex;
+
 }
 
 h1 {
@@ -81,6 +84,27 @@ h4 {
   width: 103px;
   height: 22px;
   text-align: center;
+}
+
+h5 {
+  font-size: 24px;
+  font-weight: 400;
+  margin-left: 50px;
+}
+
+.envoyer {
+  border-radius: 12px;
+  background: #FFFC00;
+  border: 0;
+  width: 77px;
+  height: 26px;
+  font-size: 16px;
+  font-weight: 600;
+}
+
+.envoi {
+  display: flex;
+  flex-direction: row;
 }
 
 .voir {
@@ -121,4 +145,22 @@ h4 {
 
 .boutons {
   display: flex;
+}
+
+.note1 {
+  width: 174px;
+  height: 30px;
+  margin-bottom: 50px;
+}
+
+.note2 {
+  width: 174px;
+  height: 30px;
+  margin-bottom: 50px;
+}
+
+.pu2 {
+  display: flex;
+  height: 75px;
+
 }
