--- a/styles.css
+++ b/styles.css
@@ -21,6 +21,8 @@ body {
   background-color: #302e2e;
   color: white;
   font-size: 16px;
+  margin-left: 15px;
+  margin-right: 15px;
 }
 
 header {
@@ -67,7 +69,7 @@ h2 {
   font-size: 20px;
   border-radius: 10px;
   border: 3px solid #FFFC00;
-  text-align: center;
+  padding
 }
 
 h3 {
@@ -105,6 +107,9 @@ h5 {
 .envoi {
   display: flex;
   flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 53px;
 }
 
 .voir {
@@ -119,16 +124,21 @@ h5 {
 .titrartiste {
   display: flex;
   flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  margin-left: 25px;
+  margin-right: 25px;
 }
 
 .infos {
   display: flex;
   flex-direction: row;
-  text-align: space-around;
+  justify-content: space-around;
   width: 400px;
   height: 17px;
-  padding: 5px;
-  position: relative;
+  margin-left: 15px;
+  margin-right: 15px;
+  margin-bottom: 15px;
 }
 
 .infos div {
@@ -143,8 +153,20 @@ h5 {
   border-radius: 5px;
 }
 
+.pournote {
+  display: flex;
+  justify-content: space-around;
+  background-color: black;
+  width: 185px;
+  height: 21px;
+  border-radius: 6px;
+}
+
 .boutons {
   display: flex;
+  justify-content: center;
+  margin-bottom: 22px;
+  padding-left: 40px;
 }
 
 .note1 {
@@ -163,4 +185,31 @@ h5 {
   display: flex;
   height: 75px;
 
+}
+
+p {
+  margin-top: 34px;
+  margin-bottom: 65px;
+}
+
+button .boutons {
+  border: 0;
+  background-color: none;
+}
+
+.ecrireavis {
+  width: 185px;
+  height: 30px;
+  text-align: center;
+}
+
+.avis {
+  width: 185px;
+  height: 30px;
+  text-align: center;
+  margin-bottom: 22px;
+}
+
+.pages {
+  font-size: 13px;
 }
