--- a/styles.css
+++ b/styles.css
@@ -36,11 +36,8 @@ header {
 header img {
   max-width: 62px;
   max-height: 62px;
-}
-
-.contourpp {
-  border: 4px;
-  border-color: #FFFC00;
+  border: 5px solid #FFFC00;
+  border-radius: 50px;
 }
 
 .retour {
@@ -51,6 +48,11 @@ header img {
   border-radius: 10px;
   width: 77px;
   height: 26px;
+  cursor: pointer;
+}
+
+.retour:hover {
+  opacity: 0.8;
 }
 
 .photomain {
@@ -58,6 +60,8 @@ header img {
   width: 185px;
   height: 339px;
   display: flex;
+  margin-left: auto;
+  margin-right: auto;
 
 }
 
@@ -102,6 +106,11 @@ h5 {
   height: 26px;
   font-size: 16px;
   font-weight: 600;
+  cursor: pointer;
+}
+
+.envoyer:hover {
+  opacity: 0.8;
 }
 
 .envoi {
@@ -119,6 +128,13 @@ h5 {
   font-weight: 600;
   border-radius: 10px;
   width: 77px;
+  display: flex;
+  margin-left: auto;
+  cursor: pointer;
+}
+
+.voir:hover {
+  opacity: 0.8;
 }
 
 .titrartiste {
@@ -126,18 +142,16 @@ h5 {
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
-  margin-left: 25px;
-  margin-right: 25px;
+  margin-left: 15px;
+  margin-right: 15px;
 }
 
 .infos {
   display: flex;
   flex-direction: row;
-  justify-content: space-around;
+  justify-content: space-between;
   width: 400px;
   height: 17px;
-  margin-left: 15px;
-  margin-right: 15px;
   margin-bottom: 15px;
 }
 
@@ -184,7 +198,13 @@ h5 {
 .pu2 {
   display: flex;
   height: 75px;
+  align-items: center;
+}
 
+.pu1 {
+  display: flex;
+  height: 75px;
+  align-items: center;
 }
 
 p {
