--- a/styles.css
+++ b/styles.css
@@ -344,6 +344,8 @@ p {
   width: 430px;
   height: 70px;
   margin-top: 24px;
+  margin-left: -15px;
+  margin-right: -15px;
   display: flex;
   justify-content: space-around;
 }
